fix: minimum width of popups were too high

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
 
 .popup-container > div {
     background: white;
-    min-width: 500px;
+    min-width: 200px;
     border-radius: 5px;
 }
 
